fixed taskbar alignment, test push to github pages

--- a/log-book-app/src/TaskBar.css
+++ b/log-book-app/src/TaskBar.css
@@ -1,12 +1,13 @@
 .taskbar {
-    position: fixed;
+
     top: 0;
     width: 100%;
     background-color: #333;
     color: white;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    position: relative;
     padding: 12px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     box-sizing: border-box;
